--- a/HomeWork-WebUI/Riode.WebUI/Riode.WebUI.csproj
+++ b/HomeWork-WebUI/Riode.WebUI/Riode.WebUI.csproj
@@ -6,13 +6,9 @@
 
   <ItemGroup>
     <Compile Remove="AppCode\**" />
-    <Compile Remove="Model\DataContexts\**" />
     <Content Remove="AppCode\**" />
-    <Content Remove="Model\DataContexts\**" />
     <EmbeddedResource Remove="AppCode\**" />
-    <EmbeddedResource Remove="Model\DataContexts\**" />
     <None Remove="AppCode\**" />
-    <None Remove="Model\DataContexts\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,6 +16,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
