--- a/HomeWork-WebUI/Riode.WebUI/Riode.WebUI.csproj
+++ b/HomeWork-WebUI/Riode.WebUI/Riode.WebUI.csproj
@@ -29,4 +29,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Views\Static\coming-soon.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
